...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UselessParent">

                        <TextView
                            android:id="@+id/itemPrompt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{isNewItem ? @string/new_item : @string/edit_item}"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            tools:text="@string/new_item" />

                    </LinearLayout>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_is_request"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="70dp"
                        android:paddingTop="12dp"
                        android:text="@string/is_request"
                        android:textSize="17sp" />
...
                    android:id="@+id/itemTitleContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/itemTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={title}" />

                </com.google.android.material.textfield.TextInputLayout>

...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    app:suffixText="CHF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/itemPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:text="@={price}" />

                </com.google.android.material.textfield.TextInputLayout>
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/saveItemButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{isNewItem ? @string/create_item : @string/edit}"
                        tools:text="@string/create_item" />
                </LinearLayout>

...
