<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        tools:context=".SoldItemListFragment">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="30dp">
            <RadioGroup
                android:id="@+id/offersRequestsGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/soldButton"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:textColor="@color/white"
                    android:text="@string/sold_button"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_button_left_selector"
                    android:checked="true"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/boughtButton"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:textColor="@color/white"
                    android:text="@string/bought_button"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_button_right_selector"
                    android:checked="false"/>
            </RadioGroup>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sold_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>
</layout>
